--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.11.0",
     "sequelize": "^5.8.11"
+  },
+  "scripts": {
+    "start" : "node index.js"
   }
 }
